tests/paczka1/fuzzy1/14689606.err
Error in line 17: f6mliN0 A907 85,1
Error in line 18: f6mliN0 A261 42,9
Error in line 8: HRBk A907 1,1
Error in line 20: f6mliN0 A997 67,1
Error in line 25: f6mliN0 A907 91,5
Error in line 26: f6mliN0 A997 84,7
Error in line 27: rohE A907 23,7
